# YT_Download

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  release-please-config.json  setup-prerequisites.bat  tailwind.config.js  vite.config.ts
.github/workflows/: ci.yml  release-please.yml  release.yml
src/: App.tsx  index.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: download.rs  history.rs  mod.rs  settings.rs  setup.rs  system.rs  updater.rs  video.rs
src-tauri/src/database/: mod.rs  mod_db.rs
src-tauri/src/security/: mod.rs  path_validator.rs  url_validator.rs
src-tauri/src/services/: binary_resolver.rs  mod.rs
src-tauri/src/services/download_manager/: job.rs  manager.rs  mod.rs
src-tauri/src/services/ytdlp/: download.rs  info.rs  mod.rs  progress.rs
src/components/: ErrorBoundary.tsx
src/components/downloader/: FormatSelector.tsx  VideoInput.tsx  VideoPreview.tsx
src/components/layout/: AppLayout.tsx  Sidebar.tsx
src/components/queue/: QueueItem.tsx
src/components/setup/: SetupPage.tsx
src/components/updater/: AppUpdateBanner.tsx  UpdateContext.tsx  YtdlpUpdateModal.tsx  index.ts
src/hooks/: useDownload.ts  useQueue.ts  useSettings.ts  useUpdateChecker.tsx
src/pages/: DownloadPage.tsx  HistoryPage.tsx  PlaylistPage.tsx  QueuePage.tsx  SettingsPage.tsx
src/services/: notifications.ts  tauriApi.ts  updaterService.ts
src/store/: queueStore.ts  settingsStore.ts
src/types/: download.ts  settings.ts  video.ts
src/utils/: formatters.ts  validators.ts
