[package]
name = "yt-downloader-tauri"
version = "1.1.1"
description = "YT Downloader - A production-grade Tauri desktop application"
authors = ["Mrtracker"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "yt_downloader_tauri_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
log = "0.4"
env_logger = "0.11"
anyhow = "1"
once_cell = "1"
dirs = "5"
url = "2"
reqwest = { version = "0.12", features = ["blocking", "stream"] }
futures-util = "0.3"
zip = "2"

# Unix-only: process-group signals for download cancellation
[target.'cfg(not(windows))'.dependencies]
nix = { version = "0.29", features = ["signal", "process"] }

# Windows-only: Job Object API for deterministic process-tree termination
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
] }

[features]
# custom-protocol is not needed in Tauri v2 - it uses the asset protocol automatically

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
